More words about F

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -49,6 +49,17 @@
 изменении общего масштаба объекта, значения такого критерия также будут
 изменятся, что достаточно неудобно при синтезе системы идентификации.
 
+Вторая проблема вызвана тем, что ни существование достаточно
+адекватной модели, ни построение хорошего критерия качества идентификации
+не даёт возможность ответить на вопрос о качестве результата,
+полученного в процессе работы системы идентификации.
+Необходимо внешнее условие, позволяющее оценить полученный результат.
+Сравнение в пространстве параметров допустимо практически только для
+искусственных модельных задач. Следовательно,
+должен быть каким-либо образом задан характерный масштаб
+в пространстве критериев, определяющий полученное качество
+идентификации.
+
 Есть, как минимум, два подхода к решению данной проблемы.
 Первый достаточно очевиден --- все критерии приводятся к безразмерному виду путём деления
 на какую-либо характерную величину той же размерности. В качестве такой величины
@@ -56,9 +67,11 @@
 значение критерия для ``центральной'' точки множества $\mathcal{P}$,
 а также подходящую по смыслу и размерности величину, полученную
 из анализа физических размерностей.
+При этом требуемое качество идентификации задаётся в
+выбранных безразмерных единицах.
 
 Второй подход используется при создании экстремальных систем управления
--- введении чётной ``функции качества''.
+-- введении ``функции качества''.
 \Cmt{TODO: ref.}
 При использовании введённых обозначений для задачи идентификации
 определим её следующим образом:
@@ -70,21 +83,36 @@ $F(q_o, q_m)$.
   \item
     Инвариантность к смещению:
     $F(a+c,b+c) = F(a,b)$.
+    Невыполнение этого требования обозначает зависимость метода
+    от используемой системы координат, и, как следствие --- приводит к логической
+    противоречивости метода.
     \Cmt{Следует ли из этого, что функция должна иметь вид $F(a-b)$?}
 
   \item
     Симметричность: $ F(a,b) = F(b,a)$.
+    Наличие этого требования обусловлено потребностью в получении несмещённых
+    оценок идентифицируемого параметра.
 
   \item
     Существование единственного экстремума с определенным значением, для определённости единичным:
     $F(a,b) = 1  \Leftrightarrow a = b $.
+    Наличие нескольких экстремумов делает результат процесса идентификации неоднозначным.
+    Это требование совершенно не налагает требование одноэкстремальности
+    на функцию $F(q(p_m), q(p_o)), \; p_o = \mathrm{const}$. Тем не менее, при
+    монотонной зависимости $q(p)$ это будет выполнятся автоматически.
 
   \item
     Монотонность на каждой из ветвей:
-    если $ a_2-b_2 > a_1-b_1, \; a_i-b_i > 0$, то $F(a_1,b_1) > F(a_2,b_2)$
+    если $ a_2-b_2 > a_1-b_1, \; a_i-b_i > 0$, то $F(a_1,b_1) > F(a_2,b_2)$.
+    Нарушение этого условия также может привести к нарушению процесса поиска,
+    так как при этом вносятся искусственные локальные экстремумы.
 
   \item
     Непрерывность --- используется классическое определение из математического анализа.
+    Формально это требование не является строго обязательным, многие из рассмотренных
+    в работе методов могут сохранить работоспособность и в этом случае. Тем не менее,
+    не следует де особой необходимости создавать искусственные помехи нормальному функционированию
+    системы идентификации.
 
 \end{itemize}
 
@@ -92,6 +120,18 @@ $F(q_o, q_m)$.
 требованием к простоте реализации функции качества,
 или даже к возможности её схемотехнической реализации
 без применения элементов вычислительной техники.
+
+Для удобства использования различных функций качества
+в одной и той же системе идентификации, а также для
+упрощения сравнения свойств исследуемых методов,
+примем:
+\begin{equation}
+  F(a,a) = 1;
+  \quad
+  \lim\limits_{b \to \pm \infty } F(a,b) = 0.
+  \label{atu:eq:F_scale}
+\end{equation}
+
 
 
 
@@ -1248,6 +1288,13 @@ $F_i \cdot S_i$. Тогда обозначим
   \label{atu:eq:p_xe}
 \end{equation}
 
+Использование в подобных выражениях только $S_i$ без $F_i$
+практического смысла не имеет,
+так как $S-i$ --- локальное свойство агента, и этом случае агенты,
+находящиеся вдали от искомой точки, но ``достаточно уверенно'' определившие $p_e$
+на основании локальных возмущений, будут учитываться наравне с теми
+агентами, которые в самом деле близки к искомому значению $p$.
+
 Следующий подход призван уменьшить зависимость первого
 от влияния локальных экстремумов и границ. В этом
 случае определяется модель $M_{i_{m}}$ с максимальным значением
@@ -1297,16 +1344,16 @@ $F$, а в оценке используется только ближайшая
 
 % }}}1
 
-\section{Адаптация параметров и состояния элементов поисковых систем}  % {{{1
-
-Какие параметры системы идентификации можно адаптировать
-и на каком уровне.
-
-\Cmt{Когда имеет смысл играть с чувствительностью.}
-
-\Cmt{Как близко имеет смысл подводить модели к экстремуму? --- это не совсем здесь, это есть и свойствах агента}
-
-% }}}1
+% \section{Адаптация параметров и состояния элементов поисковых систем}  % {{{1
+%
+% Какие параметры системы идентификации можно адаптировать
+% и на каком уровне.
+%
+% \Cmt{Когда имеет смысл играть с чувствительностью.}
+%
+% \Cmt{Как близко имеет смысл подводить модели к экстремуму? --- это не совсем здесь, это есть и свойствах агента}
+%
+% % }}}1
 
 \section{Классификация и обозначения систем идентификации}  % {{{1
 \label{atu:id_classification}
@@ -1416,8 +1463,8 @@ $F$, а в оценке используется только ближайшая
   \item
     Следующий символ, записанный после символа ``.'' указывает количество агентов в
     в поисковой группе, например: ``2'' --- поисковая пара, ``3'' --- триплет.
-    При применении методов, использующих только одит поисковый агент,
-    этот элемент классификации указывает количесво моделей, управляемых этим агентом.
+    При применении методов, использующих только один поисковый агент,
+    этот элемент классификации указывает количество моделей, управляемых этим агентом.
 
   \item Восьмой символ, указываемый при необходимости, описывает
     поведение дополнительных моделей, находящихся на границе:
