Add some links to denotations, p3 fixes

--- a/denotations.tex
+++ b/denotations.tex
@@ -11,56 +11,62 @@
 
 \begin{description}
 
-  \item[$u(t)$]  -- вход объекта и моделей, $[U]$;
+  \item[$u(t)$]  --- вход объекта и моделей, $[U]$, , (стр.~\pageref{atu:d:u});
 
-  \item[$\mathbf{x}(t)$]  -- выход объекта и моделей, при необходимости разбивается на скалярные компоненты:
-     $x(t)$, $y(t)$, $z(t)$ \ldots, $[X]$;
+  \item[$\mathbf{x}(t)$]  --- выход объекта и моделей, при необходимости разбивается на скалярные компоненты:
+    $x(t)$, $y(t)$, $z(t)$ \ldots, $[X]$, (стр.~\pageref{atu:d:x});
 
-  \item[$q(p)$]  -- зависимость значения критерия идентификации от параметра в стационарном случае, $[Q]$;
+  \item[$w(t)$]  --- ошибка измерения выходного сигнала объекта, (стр.~\pageref{atu:d:w});
 
-  \item[$q_o(t)$, $q_m(t)$]  -- мгновенные значения критерия для объекта и модели соответственно, $[P]$;
+  \item{$\mathcal{P}$} --- множество допустимых значений параметров (стр.~\pageref{atu:d:p_set}),
 
-  \item[$p_o(t)$, $p_m(t)$, $p_{mi}(t)$]  -- значения параметра для объекта, текущей модели, модели с индексом $i$;
+  \item[$N$]  --- количество моделей, (стр.~\pageref{atu:d:N});
 
-  \item[$F(q) $]  -- функция качества, $[1]$;
+  \item{$p_\mathrm{id}(t)$ } --- текущее значение параметра, полученное в результате идентификации (стр.~\pageref{atu:d:p_id}),
 
-  \item[$\Delta p$]  -- диапазон изменения параметра, $[P]$;
+  \item[$q(p)$]  --- зависимость значения критерия идентификации от параметра в стационарном случае, $[Q]$;
 
-  \item[$\Delta q$]  -- диапазон изменения критерия качества, $[Q]$;
+  \item[$q_o(t)$, $q_m(t)$]  --- мгновенные значения критерия для объекта и модели соответственно, $[Q]$;
 
-  \item[$\beta(p) = \od{q(p)}{p}$]  -- текущий наклон $q(p)$, $[Q/P]$;
+  \item[$p_o(t)$, $p_m(t)$, $p_{mi}(t)$]  --- значения параметра для объекта, текущей модели, модели с индексом $i$, $[P]$;
 
-  \item[$\beta_a = \frac{\Delta q}{\Delta p} $]  -- усредненный наклон критерия, задаёт соотношение масштабов по $p$ и $q$, $[Q/P]$;
+  \item[$F(q_o,q_m) $]  --- функция качества идентификации, $[1]$, (стр.~\pageref{atu:d:F});
 
-  \item[$ $]  -- x;
+  \item[$\Delta p$]  --- диапазон изменения параметра, $[P]$;
 
-  \item[$\tau_q$]  -- характерное время усреднения критерия, $[s]$;
+  \item[$\Delta q$]  --- диапазон изменения критерия качества, $[Q]$;
 
-  \item[$a_q = \frac{1}{\tau_q} $]  -- величина, обратная $\tau_q$, $[s^{-1}]$;
+  \item[$\beta(p) = \od{q(p)}{p}$]  --- текущий наклон $q(p)$, $[Q/P]$;
 
-  \item[$q_\gamma $]  -- величина, определяющая рабочий диапазон функции качества, $[Q]$;
+  \item[$\beta_a = \frac{\Delta q}{\Delta p} $]  --- усредненный наклон критерия, задаёт соотношение масштабов по $p$ и $q$, $[Q/P]$;
 
-  \item[$\gamma = \frac{1}{q_\gamma} $]  -- чувствительность функции качества, $[Q^{-1}]$;
+  \item[$ $]  --- x;
 
-  \item[$q_\beta = \frac{q_\gamma}{\beta} $]  -- рабочий диапазон функции качества в простанстве параметра, $[P]$.
+  \item[$\tau_q$]  --- характерное время усреднения критерия, $[s]$;
 
-  \item[$\frac{q_\gamma}{\Delta q} $]  -- x;
+  \item[$a_q = \frac{1}{\tau_q} $]  --- величина, обратная $\tau_q$, $[s^{-1}]$;
 
-  \item[$\frac{q_\gamma}{(N-1)\Delta q} $]  -- x;
+  \item[$q_\gamma $]  --- величина, определяющая рабочий диапазон функции качества, $[Q]$;
 
-  \item[$N$]  -- количесво агентов, может быть с индексом -- тогда водль одной координаты;
+  \item[$\gamma = \frac{1}{q_\gamma} $]  --- чувствительность функции качества, $[Q^{-1}]$;
 
-  \item[$ $]  -- x;
+  \item[$q_\beta = \frac{q_\gamma}{\beta} $]  --- рабочий диапазон функции качества в пространстве параметра, $[P]$.
 
-  \item[$ $]  -- x;
+  \item[$\frac{q_\gamma}{\Delta q} $]  --- x;
 
-  \item[$ $]  -- x;
+  \item[$\frac{q_\gamma}{(N-1)\Delta q} $]  --- x;
 
-  \item[$ $]  -- x;
+  \item[$ $]  --- x;
 
-  \item[$ $]  -- x;
+  \item[$ $]  --- x;
 
-  \item[$ $]  -- x;
+  \item[$ $]  --- x;
+
+  \item[$ $]  --- x;
+
+  \item[$ $]  --- x;
+
+  \item[$ $]  --- x;
 
 
 \end{description}
