--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -56,11 +56,11 @@ $[p_{\min}(t), p_{\max}(t)]$.
 изменения параметра и т.д.
 
 Пусть также существует конечное множество моделей
-$\mathbf{M}_i$, $i=0 \ldots N-1$.
+\label{atu:d:N}$\mathbf{M}_i$, $i=0 \ldots N-1$.
 Структура моделей предполагается известной и одинаковой,
 а параметру объекта $p_o(t)$ соответствуют параметры моделей $p_{i}(t)$.
 
-На вход как моделей, так и объекта подаётся входной сигнал $u(t)$.
+На вход как моделей, так и объекта подаётся входной сигнал \label{atu:d:u}$u(t)$.
 Частный случай, когда ни объект, ни модели не требуют входного сигнала
 не нарушает общности постановки. В некоторых случаях
 не следует пренебрегать ошибкой измерения входного сигнала $w_u(t)$,
@@ -72,11 +72,11 @@ $\mathbf{M}_i$, $i=0 \ldots N-1$.
 компоненты этого вектора будем обозначать соответственно $x(t)$, $y(t)$, $z(t)$.
 
 Выходные сигналы моделей
-$x_i(t)$ считаем известными точно, так как ошибки
+\label{atu:d:x}$x_i(t)$ считаем известными точно, так как ошибки
 представления значений при численных вычислениях заведомо
 пренебрежимо малы с точностью измерений. Напротив,
 выход объекта $x_{op}(t)$ считаем измеренным
-с определённой ошибкой измерения $w(t)$:
+с определённой ошибкой измерения \label{atu:d:w}$w(t)$:
 %
 \[
   x_o(t) = x_{op}(t) + w(t).
@@ -133,8 +133,8 @@ c) упрощённая форма варианта b) -- ограничение
 \end{equation}
 
 Целью задачи идентификации будем считать нахождение
-такого сигнала $p_{id}(t)$, для которого
-отличие $q_{id}(t)$ от $q_o(t)$ минимально.
+такого сигнала $p_\mathrm{id}(t)$, для которого
+отличие $q_\mathrm{id}(t)$ от $q_o(t)$ минимально.
 Понятие ``отличие'', как и вид критерия $q$, определяется исходной задачей.
 
 
