Add k_l definition to p3

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -820,7 +820,70 @@ $ ( \tilde{q}_l -1 ) \cdot ( \tilde{q}_r -1 ) < 0 $.
 \end{figure}
 
 В этом, самом благоприятном случае
+\Cmt{Самое интересное пропущено!}
 
+\paragraph{Учёт влияния оценки линейности зависимости $q(p)$}.
+
+В предшествующих рассуждениях при вычислении коэффициента ``уверенности'' $S$
+в расчёт принималось только расстояние от текущих значений параметров модели для $p_e$.
+При этом не учитывалась возможность оценки линейности аппроксимации $q(p)$
+по имеющимся данным. При этом оценка должна быть независима от изменения масштаба
+как параметров, так и критериев, иметь удобную форму для дальнейшего
+использования, и не требовать вычислений, сильно чувствительным к помехам измерений.
+
+Так как в рассматриваемом случае один агент наблюдает значения $p$ и $q$
+для трёх моделей, то оценить влияние нелинейных факторов он может
+следующим образом. В первую очередь, по значениям, соответствующим крайним точкам
+линейной интерполяцией оценивается значение $q_c$ (или же после нормализации --- $\tilde{q}_c$):
+%
+\begin{equation}
+ q_{c,\mathrm{lin}}
+  =
+  \frac{  q_l \left( p_r - p_c \right) + q_r \left( p_c - p_l \right) }{p_r-p_l},
+  \label{atu:eq:q_clin}
+\end{equation}
+%
+\begin{equation}
+  \tilde{q}_{c,\mathrm{lin}}
+  =
+  \frac{ \tilde{q}_l \tilde{p}_r - \tilde{q}_r \tilde{p}_l }{\tilde{p}_r-\tilde{p}_l}  .
+  \label{atu:eq:qr_clin}
+\end{equation}
+
+Для обеспечения корректности и малой чувствительности полученных оценок
+к ошибкам измерения следует обеспечить достаточное расстояние между соседними агентами.
+Это требование необходимо учитывать при определении динамики агентов.
+С другой стороны, проведении всех предыдущих оценках величины $p_e$
+неявно предполагалось $\tilde{p}_l < 0$ и $\tilde{p}_r > 0$.
+Следовательно, на начальном этапе работы метода случай чрезмерной близости агентов
+детектироваться автоматически и обрабатываться отдельно особым образом.
+Например, в этом случае имеет смысл принять $p_e = p_c$
+при сохранении достаточно высоких значений $S$ --- если метод привёл 
+несколько агентов в малую окрестность одной точки, то
+или точка действительно близка и искомой, или же весь метод
+недостаточно пригоден для решения поставленной задачи.
+
+
+Из полученных оценок $q_{c,\mathrm{lin}}$, $\tilde{q}_{c,\mathrm{lin}}$
+сформируем следующие безразмерные коэффициенты, позволяющие оценить
+линейность $q(p)$:
+%
+\begin{equation}
+  k_l = \frac{|q_r-q_l|}{ |q_c - q_{c,\mathrm{lin}}| + |q_r-q_l|} ,
+  \label{atu:eq:k_l1}
+\end{equation}
+%
+\begin{equation}
+  k_l = \frac{|\tilde{q}_r-\tilde{q}_l|}{ |\tilde{q}_c - \tilde{q}_{c,\mathrm{lin}}| + |\tilde{q}_r-\tilde{q}_l|} .
+  \label{atu:eq:k_l2}
+\end{equation}
+
+Данное представление $k_l$ было выбрано с целью непосредственного мультипликативного участия
+этой величины в $S$, т.е. если $\tilde{q}_{c,\mathrm{lin}} \to \tilde{q}_c$,
+то $k_l \to 1$, и есть основания полагать, что на расстояниях порядка $p_r-p_l$
+оценка $p_e$ достаточно состоятельна. С другой стороны,
+если $k_l \to 0$, то нелинейные эффекты в рассматриваемой области
+преобладают над линейными, и оценку $p_e$  стоит рассматривать как недостоверную.
 
 
 
