Add many e_{...} pics to p3.

--- a/denotations.tex
+++ b/denotations.tex
@@ -11,18 +11,18 @@
 
 \begin{description}
 
-  \item[$u(t)$]  --- вход объекта и моделей, $[U]$, , (стр.~\pageref{atu:d:u});
+  \item[$u(t)$]  --- вход объекта и моделей, $[U]$, (стр.~\pageref{atu:d:u});
 
   \item[$\mathbf{x}(t)$]  --- выход объекта и моделей, при необходимости разбивается на скалярные компоненты:
     $x(t)$, $y(t)$, $z(t)$ \ldots, $[X]$, (стр.~\pageref{atu:d:x});
 
   \item[$w(t)$]  --- ошибка измерения выходного сигнала объекта, (стр.~\pageref{atu:d:w});
 
-  \item{$\mathcal{P}$} --- множество допустимых значений параметров (стр.~\pageref{atu:d:p_set}),
+  \item[$\mathcal{P}$] --- множество допустимых значений параметров (стр.~\pageref{atu:d:p_set});
 
   \item[$N$]  --- количество моделей, (стр.~\pageref{atu:d:N});
 
-  \item{$p_\mathrm{id}(t)$ } --- текущее значение параметра, полученное в результате идентификации (стр.~\pageref{atu:d:p_id}),
+  \item[$p_\mathrm{id}(t)$ ] --- текущее значение параметра, полученное в результате идентификации (стр.~\pageref{atu:d:p_id});
 
   \item[$q(p)$]  --- зависимость значения критерия идентификации от параметра в стационарном случае, $[Q]$;
 
@@ -56,7 +56,13 @@
 
   \item[$\frac{q_\gamma}{(N-1)\Delta q} $]  --- x;
 
-  \item[$ $]  --- x;
+  \item[$p_{e} $]  --- оценка идентифицируемого параметра одним поисковым агентом, (стр.~\pageref{atu:d:p_e});
+
+  \item[$p_{eql} $]  --- оценка $p_e$ методом с кусочно-линейной аппроксимацией $q$, (стр.~\pageref{atu:d:p_eql});
+
+  \item[$p_{eFq} $]  --- оценка $p_e$ квадратичной аппроксимацией $F$, (стр.~\pageref{atu:eq:p_eFq});
+
+  \item[$p_{eFc} $]  --- оценка $p_e$ методом трёхточечного COG по $F$, (стр.~\pageref{atu:eq:p_eFc});
 
   \item[$ $]  --- x;
 
