Add q_{dem}(p) plot to p3

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -1101,7 +1101,16 @@ $c_\mathrm{s1}$, $c_\mathrm{s2}$, $c_\mathrm{s20}$
 (\ref{atu:eq:q_dem_s20}) --- только высокочастотных,
 а (\ref{atu:eq:q_dem_lin}) представляет собой
 простейший линейный случай.
-\Cmt{TODO: pic}
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.7\textwidth]{p/q_p_dem.png} }
+  \caption{Вид тестовой функции $q_\mathrm{dem}(p)$:
+     a --- условия (\ref{atu:eq:q_dem_all}),
+     b --- условия (\ref{atu:eq:q_dem_s20}),
+     c --- условия (\ref{atu:eq:q_dem_lin})
+  }
+  \label{atu:f:q_dem}
+\end{figure}
 
 В первой серии вычислительных экспериментов
 значение параметра объекта $p_o$
