Add S_1, S_3 definitions in p3.

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -565,7 +565,65 @@ $ q_l(t) \equiv q_l$.
 \Cmt{TODO: Невозможность точной аппроксимации, ошибки измерения, близость к линейно при близости агентов }
 
 
-\Cmt{TODO: S definitions here! }
+Как уже было отмечено, а задачи агента входит
+не только определение величины $p_e$,
+но и оценка собственной ``уверенности'' $S$
+в полученном значении. Рассмотри факторы,
+которые может учитывать агент при решении этой задачи.
+
+\begin{enumerate}
+
+  \item Относительная удалённость точки $p_e$ от точек, использовавшихся при
+    её определении. При этом может приниматься во внимание или только центральная точка $p_c$,
+    или же учитываться точки соседних агентов.
+
+  \item
+    Расположение $p_e$ относительно используемых агентов. Как правило, ошибки при интерполяции
+    заметно меньше ошибок при экстраполяции, и это необходимо учитывать. Также,
+    сама конфигурация используемых точек может быть более или менее благоприятна
+    для оценки $p_e$.
+
+  \item
+    В при использовании некоторых методов есть возможность оценить нелинейность
+    зависимости $q(p)$, и следовательно, учесть это при определении $S$,
+    с помощью коэффициента $k_l$.
+
+  \item
+    При оценке могут возникать особые случаи, препятствующие
+    нормальной работе метода. Следовательно, такие случаи требуют применения особых правил
+    при вычислении $S$.
+
+\end{enumerate}
+
+В учётом вышеизложенного, предлагаются
+следующие способы определения $S$:
+%
+\begin{equation}
+  S_1 = c_\mathrm{su} \exp \left( - \frac{ \left( k_l c_\mathrm{dist} ( p_e - p_c ) \right)^2 }{p_b^2} \right)
+  ,
+  \label{atu:eq:S1}
+\end{equation}
+%
+\begin{equation}
+  S_3 = c_\mathrm{su} \exp \left( - \frac{ \left( k_l c_\mathrm{dist} \min( |p_e - p_l|,|p_e - p_c|, |p_e - p_r| ) \right)^2 }{p_b^2} \right)
+  .
+  \label{atu:eq:S3}
+\end{equation}
+%
+где
+$c_\mathrm{su}$ --- коэффициент, отражающий работоспособность метода в рассматриваемом случае;
+$c_\mathrm{dist}$ ---  коэффициент, определяющий ``штраф'' или ``бонус'', связанный с относительным расположением рабочих точек;
+$k_l$ --- коэффициент оценки нелинейности системы;
+$p_b$ --- характерный масштаб, относительно которого учитывается удаление $p_e$ от используемых точек.
+
+В случаях, когда агенты равноправны, имеет смысл использовать определение (\ref{atu:eq:S3}),
+так как ошибка определения $p_e$ в первую очередь определяется
+её удалённостью от ближайшего агента, в данной работе, если не указано обратное,
+будет использоваться именно оно. Использовать определение (\ref{atu:eq:S1}) имеет смысл в тех случаях,
+когда информация, полученная от соседних агентов, менее надёжна, чем от текущего,
+например, при использовании псевдомоделей.
+
+
 
 
 \paragraph{Демонстрационная задача}
@@ -582,7 +640,7 @@ $ q_l(t) \equiv q_l$.
 где $q_{00}$, $c_\mathrm{lin}$, $c_\mathrm{s1}$, $c_\mathrm{s2}$, $c_\mathrm{s20}$
 --- коэффициенты, позволяющие
 настроить эту зависимость для проверки заданного аспекта поведения агента,
-$ \tilde{p} = \frac{p - p_{\min}}{\Delta p} $ --- параметр, приведённый к безразмерному виду.
+$ \tilde{p} = \frac{p - p_{\min}}{p_{\max} - p_{\min}} $ --- параметр, приведённый к безразмерному виду.
 При этом $\tilde{p} \in[0;1]$, $c_\mathrm{lin} \ne 0$ определяет линейную часть зависимости,
 $c_\mathrm{s1}$ и $c_\mathrm{s2}$ определяют нелинейную часть, имеющую характерный масштаб
 порядка рабочего диапазона $p$,
