Misc fixes in P3.

--- a/denotations.tex
+++ b/denotations.tex
@@ -64,7 +64,7 @@
 
   \item[$p_{eFc} $]  --- оценка $p_e$ методом трёхточечного COG по $F$, (стр.~\pageref{atu:eq:p_eFc});
 
-  \item[$S$]  --- степень ``уверенности'' агента в собственной оценке $p_e$;
+  \item[$S$]  --- степень ``уверенности'' агента в собственной оценке $p_e$, (стр.~\pageref{atu:d:S});
 
   \item[$ $]  --- x;
 
