--- a/titul.tex
+++ b/titul.tex
@@ -1,7 +1,7 @@
 \thispagestyle{empty}
 % \hyperref[titul]{Titul}
 \phantomsection
-\pdfbookmark[0]{Titil}{titulbookmark}
+\pdfbookmark[0]{Titul}{titulbookmark}
 \Xmaketitle
 % \begin{center}
 % \institution
