More pictures and methos descriptions in p3.

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -714,12 +714,20 @@ $p_l$, $q_l$, $p_r$, $q_r$.
 Это особый случай, когда значение $p_c$ агента
 достаточно хорошо совпадает с искомым значением.
 Понятие ``достаточно хорошо'' в данном случае определяется
-поставкой задачи, и данном случае задаётся предельным значением
+поставкой задачи, и может быть задана предельным значением
 функции качества: $F_c > F_{\mathrm{good}}$, где $F_{\mathrm{good}}$
 выбирается достаточно близко к единице.
-При этом считаем: $p_e = p_c$,
-$S = 1$, т.е. агент полностью ``уверен''
-в полученном значении $p_e$.
+При этом считаем:
+%
+\[
+p_e = p_c, \; c_\mathrm{su} = 1, \;  c_\mathrm{dist} = 1, \;  k_l = 1, \;  p_b = p_r - p_l,
+\]
+%
+что даёт $S = 1$, т.е. агент полностью ``уверен''
+в полученном значении $p_e$. Если есть явное ограничение
+на использование функции качества непосредственно агентом,
+то следует задать допуск на значение критерия:
+$ |q_c-q_o| < q_{\min}$.
 
 Практически, для нескольких агентов может одновременно
 может выполнится данное условие, и
@@ -741,7 +749,7 @@ $S = 1$, т.е. агент полностью ``уверен''
 алгоритмов поиска в вырожденных случаях.
 В первую очередь,
 если $F_c \le F_\mathrm{good}$, то $q_o -q_c \ne 0$,
-и можно применить следующие упрощающие преобразования:
+и можно применить следующие преобразования:
 %
 \[
   \tilde{p}_l = p_l - p_c;
@@ -760,6 +768,11 @@ $S = 1$, т.е. агент полностью ``уверен''
   \tilde{q}_l = \frac{q_l-q_c}{q_c-q_o}.
   \label{atu:eq:q_agent_rel}
 \end{equation}
+%
+При этом критерий приводится к безразмерному виду,
+причём точку отсчёта и единичную длину определяют величины
+$q_c$ и $q_o$, так как $\tilde{q_c} = 1$ и $\tilde{q_o} = 0$.
+В пространстве параметров происходит только смещение точки отсчёта.
 
 С учётом этих обозначений определим оценку $\tilde{p}_e$
 для каждого из участков независимо:
@@ -776,7 +789,7 @@ $S = 1$, т.е. агент полностью ``уверен''
 ($S = 0$) и алгоритмически исключается.
 
 
-\paragraph{Случай 2.}
+\paragraph{Случай 2.} % brIdx = 3,4,5,6
 Все значения $q_l$, $q_c$, $q_r$ лежат по одну сторону
 сторону от прямой $q=q_o$,
 что эквивалентно условию $\tilde{q}_l > 0  $ и $\tilde{q}_r > 0  $.
@@ -789,12 +802,14 @@ $S = 1$, т.е. агент полностью ``уверен''
 определения динамики агента, и соответственно, смещении
 его в сторону области, где оценка будет более обоснованной.
 Если же используется мультиагентная система,
-то полученное значение $p_e$ достаточно ограничить искусственно.
+то полученное значение $p_e$ достаточно или ограничить искусственно,
+или уменьшить его значимость за счёт снижения величины $c_\mathrm{su}$.
 
 При анализе данного случая необходимо рассмотреть несколько
 вариантов.
 
-Вариант A. Центральная точка --- наилучшая~(рис.~\ref{atu:f:pq_2A}),
+Вариант A. % brIdx = 3
+Центральная точка --- наилучшая~(рис.~\ref{atu:f:pq_2A}),
 т.е $\tilde{q}_l > 1 $ и $\tilde{q}_r > 1  $.
 
 \begin{figure}[htb!]
@@ -803,20 +818,30 @@ $S = 1$, т.е. агент полностью ``уверен''
   \label{atu:f:pq_2A}
 \end{figure}
 
-В этом случае происходит минимальная корректировка положения,
+Как видно из графика, это достаточно нетривиальная конфигурация,
+которая может соответствовать локальному приближению
+$q(p)$ к $p_o$, что для хорошего критерия нехарактерно,
+временной конфигурации рабочих точек из-за влияния помех,
+а также возможности реального нахождения $p_o$
+в текущем рабочем диапазоне, но из-за определённых причин,
+прежде всего сильной нелинейности $p(q)$
+неправильной оценке его положения.
+На основании имеющейся информации сложно сделать вывод
+о реальных причинах, поэтому
+в этом случае производится минимальная корректировка положения,
 и уверенность в полученном решении невелика:
 %
 \begin{equation}
   \tilde{p}_e = 0.1 ( \tilde{p}_{el} + \tilde{p}_{er} ),
-  \quad
-  S = 0.2 \cdot
-   e^{ \big( \frac{ 2 \tilde{p}_{e}}{(\tilde{p}_l + \tilde{p}_r)} \big)^2}.
+  \;
+  c_\mathrm{su} = 0.2, \;  c_\mathrm{dist} = 4, \;   p_b = p_r - p_l,
   \label{atu:eq:pr_e_2A}
 \end{equation}
 
 
 
-Вариант B. Центральная точка --- промежуточная~(рис.~\ref{atu:f:pq_2B}).
+Вариант B. % brIdx = 4,5
+Центральная точка --- промежуточная~(рис.~\ref{atu:f:pq_2B}).
 Соответствует условию
 $ ( \tilde{q}_l -1 ) \cdot ( \tilde{q}_r -1 ) < 0 $.
 
@@ -830,23 +855,37 @@ $ ( \tilde{q}_l -1 ) \cdot ( \tilde{q}_r -1 ) < 0 $.
   \label{atu:f:pq_2B}
 \end{figure}
 
-В этом случае в качестве $\tilde{p}_e$ и $ S$ будем использовать
+Эта конфигурация не является неопределённой, как в предыдущем случае,
+и соответствует экстраполяции зависимости за пределы $[p_l, p_r]$.
+В этом случае будем использовать
 %
 \begin{equation}
   \tilde{p}_e
   =
   \begin{cases}
-    \tilde{p}_l, & \tilde{q}_l < \tilde{q}_r
+    \tilde{p}_{el}, & \tilde{q}_l < \tilde{q}_r
     \\
-    \tilde{p}_r, & \text{ otherwise}.
+    \tilde{p}_{er}, & \text{ otherwise}.
   \end{cases}
   ,
-  S = 0.7 \cdot e^{(\frac{\tilde{p}_{e}}{\tilde{p}_b})^2}. % TODO: define p_b
+  c_\mathrm{su} = 0.9, \;  c_\mathrm{dist} = 2,  \;
+  p_b =
+  \begin{cases}
+    -\tilde{p}_l, & \tilde{q}_l < \tilde{q}_r
+    \\
+    \tilde{p}_r, & \text{ otherwise}.
+  \end{cases}.
   \label{atu:eq:pr_e2B}
 \end{equation}
 
+Относительно высокое значение
+$ c_\mathrm{su}$ и достаточно ограниченное значение $c_\mathrm{dist}$
+подчёркивают тот факт, что несмотря на наличие экстраполяции,
+метод в этом случае может давать неплохие результаты.
 
-Вариант C. Центральная точка --- наихудшая~(рис.~\ref{atu:f:pq_2C}).
+
+Вариант C. % brIdx = 6
+Центральная точка --- наихудшая~(рис.~\ref{atu:f:pq_2C}).
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=50\TW]{p/pq_sin-p_pq_cbad.png} }
@@ -855,17 +894,28 @@ $ ( \tilde{q}_l -1 ) \cdot ( \tilde{q}_r -1 ) < 0 $.
 \end{figure}
 
 Этот вариант один из наименее благоприятных для определения $p_e$,
-и этом случае можно поступить аналогично предыдущему случаю,
-только с соответствующим штрафом в значении $S$.
+ещё более неопределённый по сравнению со случаем 2A.
+В этом случае в качестве $p_e$ можно взять лучшую из крайних точек,
+при этом нулевое расстояние от этой точки в определении $S$
+необходимо скомпенсировать существенным штрафом в значении $c_\mathrm{su}$,
+остальные коэффициенты при этом значения не имеют:
+%
+\begin{equation}
+  \tilde{p}_e
+  =
+  \begin{cases}
+    \tilde{p}_{l}, & \tilde{q}_l < \tilde{q}_r
+    \\
+    \tilde{p}_{r}, & \text{ otherwise}.
+  \end{cases}
+  ,
+  c_\mathrm{su} = 0.1 .
+  \label{atu:eq:pr_e2C}
+\end{equation}
 
-\paragraph{Случай 3.}
+\paragraph{Случай 3.} % brIdx = 10
 Значения $q_l$ и $q_r$ лежат по одну сторону от прямой $q=q_o$,
 а $q_c$ --- по другую, то есть существуют два корня в рассматриваемой области~(рис.~\ref{atu:f:pq_3}).
-Это достаточно нетривиальный случай,
-и при правильном критерии и идеальных условиях
-встречаться не должен. Однако, в реальных условиях,
-при наличии ошибок изменения и несовершенстве критерия
-данный случай вполне возможен (пусть и достаточно редко), и требует отдельной обработки.
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=50\TW]{p/pq_sin-p_pq_double.png} }
@@ -873,10 +923,32 @@ $ ( \tilde{q}_l -1 ) \cdot ( \tilde{q}_r -1 ) < 0 $.
   \label{atu:f:pq_3}
 \end{figure}
 
-\Cmt{Action}
+Это достаточно нетривиальный случай,
+и при правильном критерии и идеальных условиях
+встречаться не должен. Однако, в реальных условиях,
+при наличии ошибок изменения и несовершенстве критерия
+данный случай вполне возможен (пусть и достаточно редко), и требует отдельной обработки.
+Более того, в отличие от неопределённых случаев 2A и 2C,
+данный свидетельствует о том, что искомое значение
+действительно лежит в текущем рабочем диапазоне,
+но помехи и нелинейности не дают возможности установить его
+точное положение. При этом, если для определения $p_e$
+выбрать один из интервалов $[p_l,p_c]$ и $[p_c, p_r]$,
+то этот выбор, с учётом помех, будет практически случайным,
+и малые изменения в значениях критерия могут переключить на другую ветвь.
+Поэтому, для определения $p_e$ используем подход, аналогичный применённому
+в случае 2A, но с другими коэффициентами:
+%
+\begin{equation}
+  \tilde{p}_e = 0.1 ( \tilde{p}_{el} + \tilde{p}_{er} ),
+  \;
+  c_\mathrm{su} = 0.5, \;  c_\mathrm{dist} = 2, \;   p_b = \frac{p_r - p_l}{2}.
+  \label{atu:eq:pr_e_3}
+\end{equation}
+
 
 \paragraph{Случай 4.}
-Две последовательные точки лежать по одну сторону от прямой $q=q_o$,
+Две последовательные точки лежат по одну сторону от прямой $q=q_o$,
 а оставшаяся --- по другую, то есть в рабочем диапазоне
 существует только одно пересечение~(рис.~\ref{atu:f:pq_4}).
 
@@ -892,13 +964,49 @@ $ ( \tilde{q}_l -1 ) \cdot ( \tilde{q}_r -1 ) < 0 $.
 \end{figure}
 
 В этом, самом благоприятном случае
-\Cmt{Самое интересное пропущено!}
+производится интерполяция,
+а не экстраполяция зависимости $q(p)$,
+и достаточно выбрать тот участок, на котором
+гарантированно происходит пересечение.
+При этом значения всех коэффициенты подчёркивают
+уверенность агента в определённом значении $p_e$:
+%
+\begin{equation}
+  \tilde{p}_e
+  =
+  \begin{cases}
+    \tilde{p}_{el}, & \tilde{q}_l < 0
+    \\
+    \tilde{p}_{er}, & \text{ otherwise}.
+  \end{cases}
+  ,
+  c_\mathrm{su} = 1.0, \;  c_\mathrm{dist} = 0.5,  \;
+  p_b =
+  \begin{cases}
+    -\tilde{p}_l, & \tilde{q}_l < 0
+    \\
+    \tilde{p}_r, & \text{ otherwise}.
+  \end{cases}.
+  \label{atu:eq:pr_e4}
+\end{equation}
+
+В любом из рассмотренных случаев, имеет смысл ввести дополнительное ограничение
+на значение $p_e$, так как из-за ошибок измерения и моделирования
+оно может оказаться даже вне диапазона $[p_{\min}, p_{\max}]$.
+С практической точки зрения достаточно хорошо зарекомендовало себя ограничение
+$ \tilde{p}_r \in [2\tilde{p}_l, 2\tilde{p}_r ]$.
+С учётом низкого значения $S$ для агентов, попавшим под такое ограничение,
+их влияние на общий результат будет минимальным,
+так как нормальном течении процесса идентификации существует
+хотя бы один агент с высоким значением $S$.
+Более строгие ограничения достаточно редко оправдывают себя,
+так как при этом не используются эктраполяционные свойства агентов.
 
 Описанный данными правилами способ
 определения
 $p_e$ в дальнейшем изложении будем обозначать $p_{eql}$\label{atu:d:p_eql}.
 
-\paragraph{Учёт влияния оценки линейности зависимости $q(p)$}.
+\paragraph{Учёт влияния оценки линейности зависимости $q(p)$}
 
 В предшествующих рассуждениях при вычислении коэффициента ``уверенности'' $S$
 в расчёт принималось только расстояние от текущих значений параметров модели для $p_e$.
@@ -954,7 +1062,7 @@ $p_e$ в дальнейшем изложении будем обозначать
   \label{atu:eq:k_l2}
 \end{equation}
 
-Данное представление $k_l$ было выбрано с целью непосредственного участия
+Данное представление $k_l$ было выбрано с целью непосредственного использования
 этой величины в $S$, т.е. если $\tilde{q}_{c,\mathrm{lin}} \to \tilde{q}_c$,
 то $k_l \to 1$, и есть основания полагать, что на расстояниях порядка $p_r-p_l$
 оценка $p_e$ достаточно состоятельна. С другой стороны,
@@ -1202,8 +1310,10 @@ $c_\mathrm{s1}$, $c_\mathrm{s2}$, $c_\mathrm{s20}$
 при этом величины, большие $A/2$ соответствуют
 неоправданно большой ошибке, и находятся за пределами графика.
 
-
-
+На рис.~\ref{atu:f:qsl_pe_po_qg_all} представлены зависимости ошибок идентификации
+для тестовой задачи (\ref{atu:eq:q_dem})
+при полном комплекте нелинейных членов (\ref{atu:eq:q_dem_all})
+тремя неподвижными агентами тремя рассмотренным методами определения $p_e$.
 
 \begin{figure}[htb!]
   \centerline{
@@ -1217,6 +1327,24 @@ $c_\mathrm{s1}$, $c_\mathrm{s2}$, $c_\mathrm{s20}$
   \label{atu:f:qsl_pe_po_qg_all}
 \end{figure}
 
+Метод $p_{eql}$ демонстрирует достаточно ограниченную ошибку идентификации
+при $p_o \in [p_l; p_r]$, и достаточно быстрый, но линейно ограниченный рост ошибки
+за пределами этого рабочего диапазона.
+Метод $p_{eFq}$ обнаруживает существенную зависимость от величины $q_\gamma$:
+малые значения % TODO define
+приводят к существенному росту ошибки, а с дальнейшим ростом
+уровень ошибки в пределах рабочего диапазона примерно
+одного порядка с ошибкой в методе $p_{eql}$.
+При этом, за пределами рабочего диапазона наблюдается более существенный рост ошибки.
+Метод $p_{qFc}$ демонстрирует приемлемые результаты
+только в очень узком диапазоне значений $q_\gamma$,
+что ставит под серьёзное сомнение применимость этого метода
+для реальных задач, так как при этом нет возможности предсказать
+то значение этого параметра, при котором метод будет работоспособен.
+
+
+На рис.~\ref{atu:f:qsl_pe_po_qg_s20} представлены аналогичные зависимости ошибок идентификации,
+но из нелинейных членов оставлен самый высокочастотный (\ref{atu:eq:q_dem_s20}).
 
 \begin{figure}[htb!]
   \centerline{
@@ -1230,6 +1358,21 @@ $c_\mathrm{s1}$, $c_\mathrm{s2}$, $c_\mathrm{s20}$
   \label{atu:f:qsl_pe_po_qg_s20}
 \end{figure}
 
+В этих условиях метод $p_{eql}$ демонстрирует результаты, близкие к идеальным,
+мелкая ``рябь'' на поверхности ошибки соответствует малым периодическим
+возмущением $q(p)$, а в целом даже экстраполяция по приводит к росту ошибки.
+В какой-то мере это обусловлено тем, что на рабочий диапазон приходится целое
+число периодов возмущения. Зависимость ошибки для метода
+$p_{eFq}$ проявляет меньшее значение ошибок для
+тех участков, где и наблюдался небольшой уровень ошибок для
+предыдущего случая, и практически неизменный --- в остальной области.
+Принципиальной разницы в поведении метода $p_{qFc}$
+по сравнению с предыдущим случаем нет.
+
+На рис.~\ref{atu:f:qsl_pe_po_qg_lin} представлены те же зависимости,
+в тривиальном случае (\ref{atu:eq:q_dem_lin}),
+когда зависимость $q(p)$ линейна.
+
 \begin{figure}[htb!]
   \centerline{
     \includegraphics[width=0.32\textwidth]{p/qls_pe-p_po_qg_eql_lin.png}
@@ -1241,6 +1384,16 @@ $c_\mathrm{s1}$, $c_\mathrm{s2}$, $c_\mathrm{s20}$
   \caption{Зависимости $e(p_o,q_\gamma)$ для методов $p_{eql}$, $p_{eFq}$, $p_{qFc}$ для условий (\ref{atu:eq:q_dem_lin})}
   \label{atu:f:qsl_pe_po_qg_lin}
 \end{figure}
+
+Как и следовало ожидать, метод $p_{eql}$
+демонстрирует идеальные результаты.
+График зависимости для метода $p_{eFq}$
+очерчивает его диапазон применимости --- несмотря
+на линейность $q(p)$ метод становится неработоспособным при
+излишне чувствительной функции качества.
+И наконец, поверхность графика для метода $p_{eFc}$,
+практически одинаковая для всех рассмотренных условий,
+подтверждает его слабую применимость.
 
 
 
